// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers should handle IS_READY_EPISODES 1`] = `
Object {
  "isReadyEpisodes": undefined,
}
`;

exports[`reducers should handle IS_READY_TVSHOW 1`] = `
Object {
  "isReadyTvShow": undefined,
}
`;

exports[`reducers should handle SET_TVSHOWDETAILS 1`] = `
Object {
  "tvShow": undefined,
}
`;

exports[`reducers should handle SET_TVSHOWEPISODES 1`] = `
Object {
  "tvShowEpisodes": undefined,
}
`;

exports[`reducers should return the initial state 1`] = `
Object {
  "isReadyEpisodes": false,
  "isReadyTvShow": false,
}
`;
